# structured_trts

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: 0-read.qmd  1-extract-loop.qmd  2-explore.md  2-explore.qmd
prompts/: prompt.md
src/structured_trts/: extract.py  utils.py
