[project]
name = "structured-trts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "openai>=1.100.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "plotnine>=0.15.0",
    "pyarrow>=21.0.0",
    "tiktoken>=0.11.0",
    "pydantic>=2.0.0",
    "tqdm>=4.65.0",
    "chatlas>=0.1.0",
    "google-generativeai>=0.3.0",
    "groq>=0.4.0",
    "fastparquet>=2023.10.1",
    "python-dotenv>=1.1.1",
    "ipywidgets>=8.1.7",
    "google-genai>=1.31.0",
    "pyyaml>=6.0.2",
    "nbformat>=5.10.4",
    "nbclient>=0.10.2",
]
